
                     ngIRCd - Next Generation IRC Server

                      (c)2001,2002 by Alexander Barton,
                    alex@barton.de, http://www.barton.de/

                  ngIRCd ist freie Software und steht unter
                       der GNU General Public License.

                        -- ChangeLog / Aenderungen --


ngIRCd 0.2.0, 15.02.2002

  - Nicknames und Channel-Namen werden etwas besser auf Gueltigkeit ueber-
    prueft; ist aber nach wie vor noch nicht ausreichend.
  - NJOINS von Servern wurden nicht an andere Server weitergeleitet.
  - Begonnen Channel-Modes und User-Channel-Modes zu implementieren: der
    Server versteht an User-Modes o und v, beachtet letzteres allerdings
    noch nirgends. Bekannte (aber nicht beachtete!) Channel-Modes sind
    bisher a, m, n, p, q, s und t. Diese Modes werden von Usern ange-
    nommen, von anderen Servern werden auch unbekannte Modes uebernommen.
  - Benutzer von connectierenden Servern wurden nicht in den Channels ange-
    kuendigt, es wurden nur die internen Strukturen angepasst.
  - Nach dem Connect eines Users werden LUSERS-Informationen angezeigt.

ngIRCd 0.1.0, 29.01.2002

  - User-Modes bei User-Registrierungen von andere Servern (NICK-Befehl)
    wurden falsch uebernommen. Zudem wurden die Modes falsch gekuerzt.
  - Server-Verbindungen werden nun nach dem Start erst nach einer kurzen
    Pause aufgebaut (zur Zeit drei Sekunden).
  - Hilfetext korrigiert: --help und --version waren vertauscht, die
    Option --sniffer wurde gar nicht erwaehnt.
  - FAQ.txt in doc/ begonnen.
  - der IRC-Sniffer wird nur noch aktiviert, wenn die Option auf der
    Kommandozeile angegeben wurde (bei entsprechend compiliertem Server).
  - Channels implementiert, bisher jedoch noch ohne Channel-Modes, d.h.
    es gibt keine Channel-Ops, kein Topic, kein "topic lock" etc. pp.
    Chatten in Channels ist aber natuerlich moeglich ;-)
  - neue Befehle fuer Channles: JOIN, PART und NJOIN.