@@ -10,6 +10,10 @@
                         -- ChangeLog / Aenderungen --
 
 
+ngIRCd 0.2.x, xx.02.2002
+
+  - NICK korrigiert: es werden nun auch alle "betroffenen" User informiert.
+
 ngIRCd 0.2.0, 15.02.2002
 
   - Nicknames und Channel-Namen werden etwas besser auf Gueltigkeit ueber-
@@ -95,4 +99,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.17 2002/02/15 14:35:55 alex Exp $
+$Id: ChangeLog,v 1.18 2002/02/17 17:18:59 alex Exp $
